--- a/app/views/show_user.erb
+++ b/app/views/show_user.erb
@@ -1,2 +1,7 @@
 <h1>User name: <%= @user.name %></h1>
 <h2>Restaurants</h2>
+<ul>
+<% @user.restaurants.each do |rest| %>
+  <li><a href="/restaurants/<%= rest.id %>"><%= rest.name %></a></li>
+<% end %>
+</ul>
